# Agentic_RAG

./: ingestion.ipynb  main.py  parsers.py  pyproject.toml
chunking/: text_splitter.py
config/: settings.py
data/csv/: contact_center_service_automation_synthetic.csv
data/json/: contact_center_service_automation_synthetic.json
data/ppt/: pptexamples.ppt
embeddings/: embedding_model.py
ingestion/: chunk_documents.py  ingest.py  prepare_records.py
ingestion_pipeline/: chunking.py  data_parsing.py  parsers.py
loaders/: document_loader.py
parsers/: csv_parser.py  image_parser.py  json_parser.py  parser_factory.py  pdf_parser.py  pptx_parser.py
vectordb/: milvus_client.py
