[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-text-splitters>=1.1.2",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pymupdf>=1.28.0",
    "pytesseract>=0.3.13",
    "python-pptx>=1.0.2",
]
